# testCocos2dx

./: CMakeLists.txt  README.md
Classes/: AppDelegate.cpp  Bootstrapper.cpp  Bootstrapper.h
Classes/Broadcaster/: Broadcaster.cpp  Broadcaster.h
Classes/Descriptors/: CharacterDescriptor.h  WeaponDescriptor.h
Classes/Models/Battlefield/: Battlefield.cpp  Battlefield.h  TargetLocator.h
Classes/Models/Character/: Character.cpp  Character.h
Classes/Models/Team/: Team.cpp  Team.h
Classes/Models/Weapon/: Weapon.cpp  Weapon.h
Classes/Modifiers/: BulletColorModifier.cpp  BulletColorModifier.h  IModifier.cpp  IModifier.h  ModifierManager.cpp  ModifierManager.h  OneTimeModifier.cpp  OneTimeModifier.h  TimedModifier.cpp  TimedModifier.h
Classes/Views/Bullet/: BulletView.cpp  BulletView.h
Classes/Views/Character/: CharacterView.h
Resources/ScorewarriorCS/: ScorewarriorCS.ccs  ScorewarriorCS.cfg  ScorewarriorCS.udf
Resources/ScorewarriorCS/cocosstudio/: MainScene.csd  environment_mesh.c3b
Resources/ScorewarriorCS/res/: MainScene.csb
Resources/objects/: Aiming.c3b  Death.c3b  Idle.c3b  Reloading.c3b  Shooting.c3b  Soldier.c3b  bullet.c3b
Resources/objects/Source/: Aiming.fbx  Death.fbx  Idle.fbx  Reloading.fbx  Shooting.fbx  Soldier.fbx  bullet.fbx
cocos2d/cocos/: CMakeLists.txt
cocos2d/cocos/2d/: CCFontAtlas.h
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
